Fix nested list spacing

--- a/src/static/css/base.sass
+++ b/src/static/css/base.sass
@@ -499,6 +499,9 @@ ul.links li
   :hover
     color: #666
 
+li > ul
+  margin-bottom: 11px
+
 h3 .header-link
   font-size: 20px
   line-height: 33px
